# rust-estudo

./: Cargo.toml  README.md
QuestoesObjetivas/: todo.md
QuestoesObjetivas/.obsidian/: workspace.json
QuestoesObjetivas/Bloco1_2/: aula_1_2_5_avaliacao.md
docs/: convencoes.md
docs/QuestoesObjetivas/Bloco1_2/: aula_1_2_5_avaliacao.md  aula_1_2_5_discursiva.md  aula_1_2_6_discursiva.md
src/: consts.rs
